Api Key Authentication (#17)
* adding api authentication

* API change to allow key_auth with swagger

* Add an environemnt variable for CSM_API_KEY that must be configured

* validate that the CSM_API_KEY matches the x-csm-token passed in the
  header of all requests

* set exit code and do not start service if the CSM_API_KEY is not set

* when running tests with the makefile it sets a token as
  "csm-auth-token"

* fixed the vscode to set the same test environment variable as the
  make run

* add some docs for changes

* fix environment variables when running csm
